使用 claude新增一个部门模块的 crud